--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "kafkajs": "^2.2.4",
+    "moment": "^2.29.4",
     "mongoose": "^6.10.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
